lab1/Test/L1-A-3-50.output
Error Type A at Line 4
Error Type B at Line 7
Error Type A at Line 43
Error Type A at Line 44
Error Type B at Line 45
Error Type B at Line 46
Error Type B at Line 48
