lab1/Test/L1-A-3-50.cmm
int yt76a15BmgFIO ( ) {
  if ( - - VmJEN77LJV / PdvKF / k9l1pT6b / _azBy_17Y14uBzGaMX 
    * GN2MFqIeZX - bx2JqZyCDM8a7JLGlK - jM4z8M + tNLLN8TiN 
    - k28ZmOo >= ~hJRxUls != KiGPe >= OAw5jhb != wUBWyOHlF6fQyAev 
    > FcqUWgj6A4 == jqm_QmWY3A6nCxz8p && zJX58U1Clu ) 
      dEDwyJvRwXAa6jTRjuc ;
else   KA9 2132925210.1672526367 ;

  eS ( ! Xu4 = iWVV , hkYupoVUgziFJ26i9s_ ) [ - _Jq2 
    - nElhDCF2PzBmXBKjySE - KycAz7kvhksIr1rWgg != jFp1SCSdPtaryA 
    ] . yeB7LlvCD2d5V / ! Yinm2 + 557282629.1370541204 
    / wMzDEvGVy3uJO / rsYAjd3Ncob01JX * ZZOH8vH8DyV37drdxKl 
    * ksEG / hKvziuvjANmI + - Zdia4wRCPU25_sikS9c + - 
    pgApxA32D4WvSJ8J * cYQ2DbFixbcS1oRK * d * hQyJ6v_lbVjy36b9araQ 
    / _5Yf - ! FbQrd * GrQ67zl_ >= ! psWKK8 / B9rM5NccUh 
    * epBzv9v9TQRT / wNVAu8wBjhhXSDk2 * aUuU * sb0fi * 
    FwAl == DyRgU3JlwetrEKmpUn8i ( J1PVMBe ) [ B5YkdUz9 
    ] [ IEFGk ] / day3i8r8imFcgsXWuQ2t / FhqdR * oKy_k7H64_UQb5hbY8 
    * H1fcRcFALm0DI * RKUX9s_Xoo / LUD3vOuNf / _WQAhk_9 
    / gMsTvMnAuCweH6cnALc_ * xL9RGJ1zvy31rWwHz * R == 
    - ZJS9XU * lFH53G * R * YL6kloeyUxwV0h0PpM * gaEXi0kWtxK9nzMVxz9 
    * mOK9Yr9zerkiLu4p >= - GPqDWFiZhzzQD * gg1jqMa7UkmScM_rW 
    - QgAVtgRjrSd - rKkW3Timpa1Ch - oAVj1qFoT82la6xLJ 
    == AyvI ( ) . uMv + mOFeg != ! PRqUIcCG * qircLDUIIARibeXSq3 
    <= ZUPwUUx0Y ( ) . smS7hTiMMAPR * XHRIGbbhahgvkIs 
    * zC6YsdjT2LE5dlH5t / vSL4kImFFMWawEM9i + uPCx6DMW0jvD_ 
    - xD9ux6CtIX < - ZNTjvs * ji5OwDd360Uudr / F / KJVK1Oq 
    * Sys * gY0A / tFAs3RR5pwAFtbSoI * Zx8ys6zVhlWt * 
    hytzcIRHs9Nn <= oDnYdmT ( jEEP4 ) * ksFWu + vXL95jx6zbX 
    >= - c23IC3FcLoO_NIKgD / RLyb * lF46thVy + PUuZgmflKa9MUUO 
    + V5aX + isgz7ZcWVcFSsKgakY - yNQjmR == BbU7sgAVNSmQ 
    ( VIJz4ECJaZnqxUFRUQ ) [ WbrxDCHu ] [ u4fRJzOpIHruakm 
    ] / tI / U_4DBl / KwPu9Rl3cXF31 - YUOtTA0xBea + npCVfqeOc15yNM3fWv 
    - wKQb + e0tLY_swWRIFlE__w0f + wQ8fb - uHTI5zmWH8vP2drqkU 
    || - uMj6SNxhEVJISt0w1 * CBd9VvRLYFla4848JzS * TnCX5eNHWhBBiXdkgED 
    * i5RbyNcuDuwA4bmMwrS_ / hi_UMmTP0 * Lf / rC7c80sc9NQ 
    / gcR4fS == SjuQ_jRszmlc < D_k8HG || - i2OlvGdFHu 
    - KfSy6VIqeMR + wHAwOD24mcqDJUE >= l <= OGEdsgqq3Q3fku 
    < QjcHqW > TZZNp8ZAPmGDq6iDvzV != STPi > Ek8 >= QmnRAg0eAQozt 
    != TC <= lOgB41lrHlraaX >= yKjURVHo5jRw < ryRcaE1GT 
    > oUGPZ5F < Wl != QNP9g < X < kA_F2ph5uOY >= UEO5G92DJ_5ph 
    <= T4C <= l || Fcy79K7CRukb9wJB ( ) - dDhxVxRoICi4pLO31DzK 
    < O0AJV0q != Kr1G == j @;
%}
!= int QDSj [ 1031948639 ] [ 226938313 ] [ 226993837 
  ] 209194022.2029538530 [ 1778720555 ] 
;
|| 